# TetrisGameMakeByQt

./: CMakeLists.txt  main.cpp
src/: blockItem.cpp  blockItem.h  gameWidget.cpp  gameWidget.h  globalValue.h  paintArea.cpp  paintArea.h
